<resources>
    <string name="app_name">CSIApp</string>
    <string name="liekevanlexmond">LiekevanLexmond</string>
    <string name="bounty">Bounty</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="name">Name</string>
    <string name="_50_000">$50,000</string>
    <string name="_40">40+</string>
    <string name="female">Female</string>
    <string name="lieke">Lieke</string>
    <string name="NavySeals">What the fuck did you just fucking say about me, you little bitch? I’ll have you know I graduated top of my class in the Navy Seals, and I’ve been involved in numerous secret raids on Al-Quaeda, and I have over 300 confirmed kills. I am trained in gorilla warfare and I’m the top sniper in the entire US armed forces. You are nothing to me but just another target. I will wipe you the fuck out with precision the likes of which has never been seen before on this Earth, mark my fucking words. You think you can get away with saying that shit to me over the Internet? Think again, fucker. As we speak I am contacting my secret network of spies across the USA and your IP is being traced right now so you better prepare for the storm, maggot. The storm that wipes out the pathetic little thing you call your life. You’re fucking dead, kid. I can be anywhere, anytime, and I can kill you in over seven hundred ways, and that’s just with my bare hands. Not only am I extensively trained in unarmed combat, but I have access to the entire arsenal of the United States Marine Corps and I will use it to its full extent to wipe your miserable ass off the face of the continent, you little shit. If only you could have known what unholy retribution your little “clever” comment was about to bring down upon you, maybe you would have held your fucking tongue. But you couldn’t, you didn’t, and now you’re paying the price, you goddamn idiot. I will shit fury all over you and you will drown in it. You’re fucking dead, kiddo. It should be noted that I’ve upvoted every single person who’s disagreed with me here, as far as I know. That said. In 7th grade, I took an SAT test without preparing for it at all, it was spur-of-the-moment, I knew about it about an hour ahead of time and didn’t do any research or anything. I scored higher on it than the average person using it to apply for college in my area. An IQ test has shown me to be in the 99.9th percentile for IQ. This is the highest result the test I was given reaches; anything further and they’d consider it to be within the margin of error for that test. My mother’s boyfriend of 8 years is an aerospace engineer who graduated Virginia Tech. At the age of 15, I understand physics better than him, and I owe very little of it to him, as he would rarely give me a decent explanation of anything, just tell me that my ideas were wrong and become aggravated with me for not quite understanding thermodynamics. He’s not particularly successful as an engineer, but I’ve met lots of other engineers who aren’t as good as me at physics, so I’m guessing that’s not just a result of him being bad at it. I’m also pretty good at engineering. I don’t have a degree, and other than physics I don’t have a better understanding of any aspect of engineering than any actual engineer, but I have lots of ingenuity for inventing new things. For example, I independently invented regenerative brakes before finding out what they were, and I was only seven or eight years old when I started inventing wireless electricity solutions (my first idea being to use a powerful infrared laser to transmit energy; admittedly not the best plan). I have independently thought of basically every branch of philosophy I’ve come across. Every question of existentialism which I’ve seen discussed in SMBC or xkcd or Reddit or anywhere else, the thoughts haven’t been new to me. Philosophy has pretty much gotten trivial for me; I’ve considered taking a philosophy course just to see how easy it is. Psychology, I actually understand better than people with degrees. Unlike engineering, there’s no aspect of psychology which I don’t have a very good understanding of. I can debunk many of even Sigmund Freud’s theories. I’m a good enough writer that I’m writing a book and so far everybody who’s read any of it has said it was really good and plausible to expect to have published. And that’s not just, like, me and family members, that counts strangers on the Internet. I’ve heard zero negative appraisal of it so far; people have critiqued it, but not insulted it. I don’t know if that will suffice as evidence that I’m intelligent. I’m done with it, though, because I’d rather defend my maturity, since it’s what you’ve spent the most time attacking. The following are some examples of my morals and ethical code. I believe firmly that everybody deserves a future. If we were to capture Hitler at the end of WWII, I would be against executing him. In fact, if we had any way of rehabilitating him and knowing that he wasn’t just faking it, I’d even support the concept of letting him go free. This is essentially because I think that whoever you are in the present is a separate entity from who you were in the past and who you are in the future, and while your present self should take responsibility for your past self’s actions, it shouldn’t be punished for them simply for the sake of punishment, especially if the present self regrets the actions of the past self and feels genuine guilt about them. I don’t believe in judgement of people based on their personal choices as long as those personal choices aren’t harming others. I don’t have any issue with any type of sexuality whatsoever (short of physically acting out necrophilia, pedophilia, or other acts which have a harmful affect on others - but I don’t care what a person’s fantasies consist of, as long as they recognize the difference between reality and fiction and can separate them). I don’t have any issue with anybody over what type of music they listen to, or clothes they wear, etc. I know that’s not really an impressive moral, but it’s unfortunately rare; a great many people, especially those my age, are judgmental about these things. I love everyone, even people I hate. I wish my worst enemies good fortune and happiness. Rick Perry is a vile, piece of shit human being, deserving of zero respect, but I wish for him to change for the better and live the best life possible. I wish this for everyone. I’m pretty much a pacifist. I’ve taken a broken nose without fighting back or seeking retribution, because the guy stopped punching after that. The only time I’ll fight back is if 1) the person attacking me shows no signs of stopping and 2) if I don’t attack, I’ll come out worse than the other person will if I do. In other words, if fighting someone is going to end up being more harmful to them than just letting them go will be to me, I don’t fight back. I’ve therefore never had a reason to fight back against anyone in anything serious, because my ability to take pain has so far made it so that I’m never in a situation where I’ll be worse off after a fight. If I’m not going to get any hospitalizing injuries, I really don’t care. The only exception is if someone is going after my life. Even then, I’ll do the minimum amount of harm to them that I possibly can in protecting myself. If someone points a gun at me and I can get out of it without harming them, I’d prefer to do that over killing them. I consider myself a feminist. I don’t believe in enforced or uniform gender roles; they may happen naturally, but they should never be coerced into happening unnaturally. As in, the societal pressure for gender roles should really go, even if it’ll turn out that the majority of relationships continue operating the same way of their own accord. I treat women with the same outlook I treat men, and never participate in the old Reddit “women are crazy” circlejerk, because there are multiple women out there and each have different personalities just like there are multiple men out there and each with different personalities. I don’t think you do much of anything except scare off the awesome women out there by going on and on about the ones who aren’t awesome. That doesn’t mean I look for places to victimize women, I just don’t believe it’s fair to make generalizations such as the one about women acting like everything’s OK when it’s really not (and that’s a particularly harsh example, because all humans do that). I’m kind of tired of citing these examples and I’m guessing you’re getting tired of reading them, if you’ve even made it this far. In closing, the people who know me in real life all respect me, as do a great many people in the Reddit brony community, where I spend most of my time and where I’m pretty known for being helpful around the community. A lot of people in my segment of the community are depressed or going through hard times, and I spend a lot of time giving advice and support to people there. Yesterday someone quoted a case of me doing this in a post asking everyone what their favorite motivational/inspirational quote was, and that comment was second to the top, so I guess other people agreed (though, granted, it was a pretty low-traffic post, only about a dozen competing comments). And, uh, I’m a pretty good moderator. All that, and I think your behavior in this thread was totally assholish. So what do you think, now that you at least slightly know me?</string>
    <string name="report">REPORT</string>
</resources>
