<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="school.csiapp.MainActivity"
    android:weightSum="1"
    android:background="#474747"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/lexmond"
            android:contentDescription="@string/liekevanlexmond"
            android:layout_width="200dp"
            android:adjustViewBounds="false"
            android:layout_weight="1"
            android:layout_height="200dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#962f2f"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/LabelName"
                    android:textSize="22sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lieke"
                    android:id="@+id/Name"
                    android:textSize="22dp"
                    android:textColor="@android:color/black"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#962f2f">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:id="@+id/LabelSex"
                    android:textSize="22sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/Sex"
                    android:textSize="22dp"
                    android:textColor="@android:color/black"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#962f2f">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:id="@+id/LabelAge"
                    android:textSize="22sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_40"
                    android:id="@+id/Age"
                    android:textSize="22dp"
                    android:textColor="@android:color/black"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#962f2f">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bounty"
                    android:id="@+id/LabelBounty"
                    android:textSize="22sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50_000"
                    android:id="@+id/Bounty"
                    android:textSize="22dp"
                    android:textColor="@android:color/black"
                    android:gravity="right" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:id="@+id/scrollView"
        android:layout_gravity="bottom|center_horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:text="@string/NavySeals"
            android:id="@+id/Details"
            android:background="@android:color/holo_green_dark"
            android:gravity="center_horizontal|center"
            android:layout_height="wrap_content" />
    </ScrollView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CrimesList" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            style="@style/DefaultButton"
            android:text="@string/report"
            android:id="@+id/button"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent" />
    </LinearLayout>

</LinearLayout>
